Started update to Cloud Firestore

--- a/app/src/main/res/menu/activity_chat_drawer.xml
+++ b/app/src/main/res/menu/activity_chat_drawer.xml
@@ -9,19 +9,23 @@
             android:layout_width="wrap_content"
             android:title="Chat" />
         <item
-            android:id="@+id/nav_home"
+            android:id="@+id/nav_friends"
+            android:layout_width="wrap_content"
+            android:title="Friends" />
+        <item
+            android:id="@+id/nav_requests"
+            android:layout_width="wrap_content"
+            android:title="Friend Requests" />
+        <item
+            android:id="@+id/nav_search_users"
             android:title="Search Users" />
         <item
-            android:id="@+id/nav_literature"
+            android:id="@+id/nav_search_groups"
             android:title="Search Groups" />
         <item
-            android:id="@+id/nav_drawings"
+            android:id="@+id/nav_account_settings"
             android:title="Account Settings" />
-        <item
-            android:id="@+id/nav_videos"
-            android:layout_width="wrap_content"
-            android:title="Conversation Settings" />
-    </group>
+</group>
 
     <item android:title="Communicate">
         <menu>
