--- a/app/src/main/res/layout/content_friends.xml
+++ b/app/src/main/res/layout/content_friends.xml
@@ -1,20 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FriendsList">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <include layout="@layout/app_bar_layout"
-        android:id="@+id/FriendsListToolbar"/>
+        android:id="@+id/FriendListToolbar"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="669dp"
-        app:layout_constraintTop_toBottomOf="@+id/FriendsListToolbar"
+        app:layout_constraintTop_toBottomOf="@+id/FriendListToolbar"
         tools:layout_editor_absoluteX="0dp"
-        android:id="@+id/UserListPage">
+        android:id="@+id/FriendListPage">
 
     </androidx.recyclerview.widget.RecyclerView>
 
